[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-logistics"
version = "1.0.0"
description = "Global Logistics Dispatcher for OpenEnv"
authors = [
    { name = "Preet", email = "preet@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"